# obsidian-utils

./: .envrc  .gitignore  CODE_SNIPPETS.md  Cargo.toml  DOCUMENTATION_CREATED.txt  DOCUMENTATION_INDEX.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  QUICK_REFERENCE.md  README.md  VAULT_READING_ARCHITECTURE.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bins/bases/: Cargo.toml
bins/bases/src/: main.rs
bins/links/: Cargo.toml
bins/links/src/: main.rs
bins/tags/: Cargo.toml
bins/tags/src/: main.rs
crates/bases/: Cargo.toml
crates/bases/src/: ast.rs  error.rs  functions.rs  lib.rs  parser.rs  prepared.rs  schema.rs  value.rs
crates/bases/src/value/: date.rs  fields.rs  file.rs  list.rs  mod.rs  moment_format.rs  number.rs  string.rs
crates/bases/tests/: function_tests.rs  parser_tests.rs  prepared_base_tests.rs  value_tests.rs
crates/core/: Cargo.toml
crates/core/src/: frontmatter.rs  lib.rs  parser.rs  printer.rs  reader.rs
crates/links/: Cargo.toml
crates/links/src/: lib.rs  parser.rs
migrations/: 20250928030337_setup.sql
src/: main.rs  parser.rs  reader.rs
src/processor/: file_handler.rs  mod.rs  tags.rs
test-vault/: Test.md  complex.base  notes.txt
test-vault/.obsidian/: workspace.json
test-vault/links/: Encoded.md  Fragment Target.md  Sibling.md  Source.md  Space Target.md  WikiSibling.md  WikiTarget.md
test-vault/nested/: Deep.md
