[package]
name = "obsidian-db"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
comrak = "0.43"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9.42"
