[workspace]
members = ["crates/*", "bins/*"]

[workspace.dependencies]
anyhow = "1.0.100"
ciborium = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
comrak = "0.43"
env_logger = "0.11"
log = "0.4"
obsidian-core = { path = "crates/core" }
obsidian-links = { path = "crates/links" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9.42"
tabled = { version = "0.20.0", features = ["derive"] }
