[package]
name = "links"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "obsidian-links"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ciborium = { workspace = true }
clap = { workspace = true }
comrak = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
obsidian-core = { workspace = true }
obsidian-links = { workspace = true }
serde = { workspace = true }
tabled = { workspace = true }
