[package]
name = "obsidian-tags"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ciborium = { workspace = true }
clap = { workspace = true }
comrak = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
obsidian-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
tabled = { workspace = true }
