[package]
name = "tags"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "obsidian-tags"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ciborium = { workspace = true }
clap = { workspace = true }
comrak = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
obsidian-core = { workspace = true }
serde = { workspace = true }
