[package]
name = "obsidian-bases"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
nom = { workspace = true }
obsidian-core = { workspace = true }
obsidian-links = { workspace = true }
serde = { workspace = true }
serde_norway = { workspace = true }
thiserror = { workspace = true }
